# order_processor

./: .gitignore  Cargo.toml  README.md  build.rs  configs.txt  dims.txt
benches/: benchmark.rs  flamegraph.rs
src/: configs.rs  excel.rs  lib.rs  main.rs  order.rs  order_summary.rs  parser.rs  report.rs  runs.rs  sticker.rs
src/structs/: color.rs  dimensions.rs  material.rs  order.rs  parse_stcker_error.rs  sticker.rs
tests/: sticker_parsing_tests.rs
