[package]
name = "order_processor"
version = "0.1.0"
edition = "2021"

[features]
default = ["error_handling", "material_report"]
error_handling = []
full_error_handling = ["error_handling"]
no_inferring = []
material_report = []

[dependencies]
calamine = "0.26.0"
chrono = "0.4.41"
colored = "3.0.0"
either = "1.15.0"
itertools = "0.14.0"
rayon = "1.10.0"
regex = "1.11.1"
strsim = "0.11.1"
xlsxwriter = "0.6.1"

[dev-dependencies]
criterion = "0.5"
pprof = { version = "0.15.0", features = ["flamegraph", "criterion"] }

[[test]]
name = "sticker_parsing_tests"
required-features = ["error_handling"]

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "flamegraph"
harness = false
